Album license and details

--- a/src/content/albums/japan-2024.yml
+++ b/src/content/albums/japan-2024.yml
@@ -1,3 +1,6 @@
-title: Japan 2024 
+title: Japan 2024
 description: A collection of photos from my trip to Japan in 2024.
+film: dubblefilm cinema 800
+camera: Minolta X-300
 cover: ./japan-2024/cover.jpg
+copyright: "© 2024 by Héctor Julio. Licensed under CC BY-NC."
